HeadLamp/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:34:41 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "HeadLamp.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Project\STM32_PROJECT\HeadLamp\HeadLamp\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HeadLamp.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: HeadLamp.elf
 
arm-none-eabi-size  HeadLamp.elf 
arm-none-eabi-objdump -h -S HeadLamp.elf  > "HeadLamp.list"
   text	   data	    bss	    dec	    hex	filename
   6472	     12	   1572	   8056	   1f78	HeadLamp.elf
arm-none-eabi-objcopy  -O ihex HeadLamp.elf  "HeadLamp.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary HeadLamp.elf  "HeadLamp.bin"
 
Finished building: HeadLamp.hex
Finished building: HeadLamp.bin
 
Finished building: HeadLamp.list
 
 
20:38:50 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:141:10: error: unknown type name 'bool'
  141 | volatile bool On_OFF_HeadLamp = false;
      |          ^~~~
../Core/Src/main.c:141:33: error: 'false' undeclared here (not in a function)
  141 | volatile bool On_OFF_HeadLamp = false;
      |                                 ^~~~~
../Core/Src/main.c:21:1: note: 'false' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   20 | #include "main.h"
  +++ |+#include <stdbool.h>
   21 | 
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:233:38: error: expected ';' before '{' token
  233 |                 else(On_OFF_HeadLamp)
      |                                      ^
      |                                      ;
  234 |                 {
      |                 ~                     
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.
20:39:33 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:233:38: error: expected ';' before '{' token
  233 |                 else(On_OFF_HeadLamp)
      |                                      ^
      |                                      ;
  234 |                 {
      |                 ~                     
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.
20:40:13 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:141:10: error: unknown type name 'bool'
  141 | volatile bool On_OFF_HeadLamp = false;
      |          ^~~~
../Core/Src/main.c:141:33: error: 'false' undeclared here (not in a function)
  141 | volatile bool On_OFF_HeadLamp = false;
      |                                 ^~~~~
../Core/Src/main.c:21:1: note: 'false' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   20 | #include "main.h"
  +++ |+#include <stdbool.h>
   21 | 
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.
20:40:30 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:142:10: error: unknown type name 'bool'
  142 | volatile bool On_OFF_HeadLamp = false;
      |          ^~~~
../Core/Src/main.c:142:33: error: 'false' undeclared here (not in a function)
  142 | volatile bool On_OFF_HeadLamp = false;
      |                                 ^~~~~
../Core/Src/main.c:21:1: note: 'false' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   20 | #include "main.h"
  +++ |+#include <stdbool.h>
   21 | #include <stdint.h>
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.
20:41:40 **** Incremental Build of configuration Debug for project HeadLamp ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "HeadLamp.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Project\STM32_PROJECT\HeadLamp\HeadLamp\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HeadLamp.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: HeadLamp.elf
 
arm-none-eabi-size  HeadLamp.elf 
arm-none-eabi-objdump -h -S HeadLamp.elf  > "HeadLamp.list"
   text	   data	    bss	    dec	    hex	filename
   6596	     12	   1572	   8180	   1ff4	HeadLamp.elf
arm-none-eabi-objcopy  -O ihex HeadLamp.elf  "HeadLamp.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary HeadLamp.elf  "HeadLamp.bin"
 
Finished building: HeadLamp.hex
Finished building: HeadLamp.bin
Finished building: HeadLamp.list
 
 
 
